--- a/_config.yml
+++ b/_config.yml
@@ -2,63 +2,41 @@ url: https://ankitkachru.github.io
 baseurl: ../portfolio2/
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Ankit Kachroo
+email: hello@ankitkachru.xyz
+description: "Ankit Kachroo"
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Ankit Kachroo
   pic: 1
-  position: Lead Designer
+  position: 
   social:
     - title: twitter
-      url: #
+      url: http://twitter.com/ankitkachru#
     - title: facebook
-      url: #
+      url: http://facebook.com/ankitkachru#
     - title: stack-overflow
       url: #
 
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: linkedin
-      url: #
 
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: google-plus
-      url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/ankitkachru
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+    url: http://facebook.com/ankitkachru
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/ankitkachru
+  - title: linkedin
+    url: http://linkedin.com/in/ankitkachru
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: 39/4 Pamposh Colony, Janipur
+  - line: Jammu, JK, IN 180007
 
 # Build settings
 markdown: kramdown
